# prompt_catalog-project

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.rst  poetry-lock-hash.json  pyproject.toml  pyproject_ops.json  release-history.rst  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/source/: conf.py
docs/source/01-Prompt-Engineer-in-Enterprise/: Prompt-Engineering-in-Enterprise.drawio  index.rst
prompt_catalog/: airtable.py  exc.py  fts.py  paths.py
prompt_catalog/core/: model.py
prompt_catalog/core_legacy/: __init__.py  model.py
prompt_catalog/gui/: app.py  main.py  tab_dialog.py
prompt_catalog/gui/tabs/compose/: api.py  main.py  one_element.py  select_choice.py  select_element.py
prompt_catalog/gui/utils/: api.py  button.py  grid_layout.py  line_edit.py  single_and_multi_select.py
scripts/: full_text_search_airtable.py  get_data_from_airtable.py  run_gui.py
tests/: all.py  test_api.py  test_core_model.py
